tenzir/integration/data/reference/pipelines_local/test_chart_attributes/step_05.ref
error: unknown option `-x`
 --> <input>:1:44
  |
1 | from stdin read json | chart pie --value b -x e
  |                                            ^^ 
  |
  = usage: chart pie [--name <field>] [--value <field>] [--title <title>]
  = docs: https://docs.tenzir/operators/chart